--- a/frontend/src/styles/components/ModalEliminar.css
+++ b/frontend/src/styles/components/ModalEliminar.css
@@ -40,11 +40,13 @@
 .modal-body {
   padding: 1.5rem;
   color: #212529;
+  text-align: center;
 }
 
 .modal-body p {
   margin: 0 0 1rem 0;
   line-height: 1.5;
+  text-align: center;
 }
 
 /* Pie del modal */
